--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
 <style>
 svg {
-  width: 1024px;
-  height: 2048px;
+  width: 100%;
+  height: 100%;
   left: 0;
 }
 
@@ -41,20 +41,21 @@ body{
   width: 1024px;}
 */
 body{
-  background-image: url("Moscow.png");
+  background-image: url("Moscow.jpg");
+  background-color: #E7DCD1;
   background-repeat: no-repeat;
   background-position: center top; 
   background-attachment: scroll;
   position: absolute;
   left: 50%;
-  width: 512px;
-  height: 2000px;  
+  width: 640px;
+  height: 1180px;  
 }
 subbody{
   position: absolute;
-  left: -512px;
-  width: 1024px;
-  height: 2000px; 
+  left: -640px;
+  width: 1280px;
+  height:1180px; 
 }
 
 
@@ -102,6 +103,9 @@ khtml-opacity:0; fill-opacity
 
 <script>
 
+var corrY=-20;
+var corrX=80;
+
 /*
 $("html").click(function() {
   $("g").empty();
@@ -135,7 +139,7 @@ d3.json("Node.json", function(data) {
  // if (error) return console.warn(error);
  // data = json;
   visualization(data);
-
+  features(data);
 });
 
 d3.json("connections.json", function(data) {
@@ -143,7 +147,8 @@ d3.json("connections.json", function(data) {
 });
 
 
-var visualization = function (data){
+//var visualization = function (data){
+function visualization (data){
 
 var filter = d3.select("svg").append("filter")
     .attr("id", "drop-shadow")
@@ -183,10 +188,14 @@ feMerge.append("feMergeNode")
 
 //.on("click", function(){d3.selectAll("g").remove();});
 
+
+
 var circles = d3.select("svg")
 .selectAll("circle")
 .data(data)
 .enter().append("circle")
+.attr("id",function(d,i) {return "cir"+i})
+//.style("fill", "star.svg")
 .attr("stroke-width",2)
 .attr("fill",function(d){
   var returncolor;
@@ -208,12 +217,45 @@ var circles = d3.select("svg")
 })
 //.style("filter", "url(#drop-shadow)")
 .attr("r", 13)
-.attr("cy",function(d){return d.Y})
-.attr("cx",function(d){return d.X})
-.on("mouseover", pulse(15,150))
-.on("mouseout", pulse(13,150))
-//.on("click", function(){information(100,100)});
-.on("click", function(d){information(d.X,d.Y,d.Title,d.Location,d.Desc,d.Work,d.Coffee)});
+.attr("cy",function(d){return d.Y+corrY})
+.attr("cx",function(d){return d.X+corrX});
+//.on("mouseover", pulse(15,150))
+//.on("mouseout", pulse(13,150))
+//.on("click", function(d){information(d.X,d.Y,d.Title,d.Location,d.Desc,d.Work,d.Coffee)});
+
+
+
+
+
+//.style("fill","url(star.svg)")
+/*
+//d3.select("svg").selectAll("circle").data(data).enter()
+d3.select("svg").selectAll("circle")
+//.data(data).enter()
+
+.append("pattern").attr("id","image");//.attr("x",0).attr("y",0).attr("height",20).attr("width",20);
+
+d3.select("svg").selectAll("pattern")
+.append("svg:image")
+//.attr("fill", "star.svg");
+//.style("fill","white")
+.attr("xlink:href","star.svg")
+.attr("x",440+corrY-10)
+.attr("y",685+corrX-10)
+//.attr("x",function(d){return d.Y+corrY-10})
+//.attr("y",function(d){return d.X+corrX-10})
+.attr("width",20)//1.846
+.attr("height",20);
+//.attr("opacity",1);
+/*
+//.attr("fill","white")
+//.attr("opacity",1);
+.attr("xlink:href","star.svg");
+*/
+
+
+
+
   //function(d){return d[1].X},function(d){return d[1].Y})});
 
 //  infoshow(function(d){return d.X},function(d){return d.Y}));
@@ -225,9 +267,12 @@ var circles = d3.select("svg")
 
 
 
+
+
+
 var work_s = d3.scale.linear().domain([0, 4]).range([0, 2 * Math.PI]);
 var arc_outer_radius = 21;
-var arc_inner_radius = 19;
+var arc_inner_radius = 19.5;
 
 var arc_back = d3.svg.arc()
 .innerRadius(arc_inner_radius-0)
@@ -239,8 +284,8 @@ var arcs_back = d3.select("svg").selectAll("arc_back")
 .data(data)
 .enter().append("path")
 .attr("d",arc_back)
-.attr("fill", "#A0A0A0")//3E3E3E
-.attr("transform", function(d) { return "translate(" + d.X + "," + d.Y + ")"; });
+.attr("fill", "#707070")//909090//3E3E3E
+.attr("transform", function(d) {var tmpX=d.X+corrX; var tmpY=d.Y+corrY; return "translate(" + tmpX + "," + tmpY + ")"; });
 
 
 
@@ -258,22 +303,10 @@ var arcs = d3.select("svg").selectAll("arcs")
 .data(data)
 .enter().append("path")
 .attr("d",arc)
-.attr("fill", "#603813")//CFFF00
-.attr("transform", function(d) { return "translate(" + d.X + "," + d.Y + ")"; });
+.attr("fill", "#351503")//603813//CFFF00
+.attr("transform", function(d) {var tmpX=d.X+corrX; var tmpY=d.Y+corrY; return "translate(" + tmpX + "," + tmpY + ")"; });
 
 
-
-function pulse(finalRadius,duration) {
-  return function() {
-    d3.select(this).transition().attr("r",finalRadius).duration(duration);//.ease("elastic");
-/*    .attrTween("r", function(r) 
-    {
-      var i = d3.interpolate(13, finalRadius);
-      return function(t) { r = i(t); return r; };
-    });*/
-  };
-
-}
 
 
 
@@ -283,165 +316,22 @@ var dispatch = d3.dispatch("infoshow", "infohide");
 dispatch.on("infoshow", information);
 dispatch.on("infohide", listener);
 */
-
-function information(X,Y,Title,Location,Desc,Work,Coffee){
-
-var infoWidth=200;
-var infoHight=350;
-//////////p.legibility {
-//////////  text-rendering: optimizeLegibility;}
-
-
-d3.selectAll("g").remove();
-
-var group=d3.select("svg").append("g");
-
-var line = group.append("line")
-  .attr("stroke-width",2)
-  .attr("stroke","#603813")
-  .attr("x1",X+21)
-  .attr("y1",Y)
-  .attr("x2",X+21)
-  .attr("y2",Y);
-
-line
-  .transition()
-  .attr("x2",X+50+170)
-  .duration(100);
-
-var rectangle=group.append("rect")
-.attr("fill","#603813")
-.attr("stroke-width",2)
-.attr("stroke","#351503")
-.attr("x",X+50)
-.attr("y",Y)
-.attr("rx",3)
-.attr("ry",3)
-.attr("width",infoWidth)
-.attr("height",0);
-
-rectangle
-  .transition()
-  .attr("height",infoHight)
-  .attr("y",Y-21)
-  .delay(100)
-  .duration(500);
-
-var title=group.append("text")
-//.html(Title)
-.text(Title)
-.attr("width",infoWidth-20)
-.attr("height",40)
-.attr("style","letter-spacing:1;")
-//.attr("text-rendering","optimizeLegibility")
-///.attr("webkit-appearance","none")
-.attr("x",X+60)
-.attr("y",Y)
-.attr("fill","white")
-////.attr("font-family","Amaranth")
-.attr("font-weight",100)
-.attr("font-size","1.2em")
-.attr("opacity",0);
-
-var location=group.append("text")
-.text(Location)
-.attr("x",X+60)
-.attr("y",Y+12)
-.attr("fill","#A67C52")
-.attr("opacity",0)
-//.attr("fill","#A67C52")
-.attr("font-weight",900)
-.attr("font-size","0.8em");
-
-
-var cup=group.append("svg:image")
-.attr("x",X+58)
-.attr("y",Y+26)
-.attr("width",18)//1.846
-.attr("height",10)
-.attr("fill","white")
-.attr("opacity",0)
-.attr("xlink:href","cup.svg");
-
-
-var cupText=group.append("text")
-.text(Coffee+" / 4")
-//.text("Капучино")
-.attr("x",X+80)
-.attr("y",Y+35)
-.attr("fill","white")
-.attr("opacity",0)
-.attr("font-weight",200)
-.attr("font-size","0.8em");
-
-
-var note=group.append("svg:image")
-.attr("x",X+118)
-.attr("y",Y+26)
-.attr("width",18)//1.846
-.attr("height",10)
-.attr("fill","white")
-.attr("opacity",0)
-.attr("xlink:href","note.svg");
-
-
-var noteText=group.append("text")
-.text(Work+" / 4")
-//.text("Капучино")
-.attr("x",X+140)
-.attr("y",Y+35)
-.attr("fill","white")
-.attr("opacity",0)
-//.attr("font-weight",900)
-.attr("font-size","0.8em");
-
-var description=group.append("foreignObject")
-.attr("width",infoWidth-20)
-.attr("height","100%")
-.attr("x",X+60)
-.attr("y",Y+50)
-.attr("opacity",0);
-
-
-
-title.transition().attr("opacity",1).delay(300);
-location.transition().attr("opacity",1).delay(300);
-cup.transition().attr("opacity",1).delay(300);
-cupText.transition().attr("opacity",1).delay(300);
-note.transition().attr("opacity",1).delay(300);
-noteText.transition().attr("opacity",1).delay(300);
-description.transition().attr("opacity",1).delay(300);
-
-
-description
-.append("xhtml:p")
-.html(Desc)
-//.attr("font-family","Amaranth")
-.attr("font-weight",100)
-.attr("font-size","0.8em");
-
-//function(Desc)
-
-//var tmp=group.attr("height");
-//attr("height");
-//foreignObject.attr("height");
-//d3.select("foreignObject").node().getBoundingClientRect().height;
-//d3.select("foreignObject").style("height")
-
-
-//d3.select("rect").transition().attr("height",tmp).duration(300);
-//d3.select("rect")
-//.attr("height",tmp.height);
-//$("div").height()
-
-
-}
 }
 
 
 function animation(data){
 
+var blankR=21;
+/*
+var lineX1Corr=function(d){return d.x1+corrX};
+var lineY1Corr=function(d){return d.y1+corrY};
+var lineX2Corr=function(d){return d.x2+corrX};
+var lineY2Corr=function(d){return d.y2+corrY};
 
+var lineDeltaX=lineX2Corr-lineX1Corr;
+var lineDeltaY=lineY2Corr-lineY1Corr;
+var lineSqrt=Math.sqrt(lineDeltaX*lineDeltaX+lineDeltaY*lineDeltaY);
+*/
 /*
   var tmpX=function(d){return d.x2-d.x1};
   var tmpY=10;//function(d){return d.y2-d.y1};
@@ -456,18 +346,28 @@ var lines = d3.select("svg")
   .selectAll("line")
   .data(data)
   .enter().append("line")
-  .attr("stroke-width",0.5)
+  .attr("stroke-width",1)
   .style("stroke-dasharray",("6,3"))
-  .attr("stroke","#603813")
+  .attr("stroke","#707070")
   .attr("opacity",1)
-  .attr("x1",function(d){return d.x1+23*(d.x2-d.x1)/Math.sqrt((d.x2-d.x1)*(d.x2-d.x1)+(d.y2-d.y1)*(d.y2-d.y1))})
-  .attr("y1",function(d){return d.y1+23*(d.y2-d.y1)/Math.sqrt((d.x2-d.x1)*(d.x2-d.x1)+(d.y2-d.y1)*(d.y2-d.y1))})//data.y1-dY)
-  .attr("x2",function(d){return d.x1+23*(d.x2-d.x1)/Math.sqrt((d.x2-d.x1)*(d.x2-d.x1)+(d.y2-d.y1)*(d.y2-d.y1))})
-  .attr("y2",function(d){return d.y1+23*(d.y2-d.y1)/Math.sqrt((d.x2-d.x1)*(d.x2-d.x1)+(d.y2-d.y1)*(d.y2-d.y1))})
-  .transition()
-  .attr("x2",function(d){return d.x2-23*(d.x2-d.x1)/Math.sqrt((d.x2-d.x1)*(d.x2-d.x1)+(d.y2-d.y1)*(d.y2-d.y1))})
-  .attr("y2",function(d){return d.y2-23*(d.y2-d.y1)/Math.sqrt((d.x2-d.x1)*(d.x2-d.x1)+(d.y2-d.y1)*(d.y2-d.y1))})
+/*  .attr("x1",lineX1Corr+blankR*lineDeltaX/lineSqrt)
+  .attr("y1",lineY1Corr+blankR*lineDeltaY/lineSqrt)
+  .attr("x2",lineX1Corr+blankR*lineDeltaX/lineSqrt)
+  .attr("y2",lineY1Corr+blankR*lineDeltaY/lineSqrt)
+//  .transition()
+//  .attr("x2",lineX2Corr-blankR*lineDeltaX/lineSqrt)
+//  .attr("y2",lineY2Corr-blankR*lineDeltaY/lineSqrt)
   .delay(function(d,i){return i*200}).duration(400);
+*/
+
+  .attr("x1",function(d){return d.x1+corrX+blankR*(d.x2-d.x1)/Math.sqrt((d.x2-d.x1)*(d.x2-d.x1)+(d.y2-d.y1)*(d.y2-d.y1))})
+  .attr("y1",function(d){return d.y1+corrY+blankR*(d.y2-d.y1)/Math.sqrt((d.x2-d.x1)*(d.x2-d.x1)+(d.y2-d.y1)*(d.y2-d.y1))})//data.y1-dY)
+  .attr("x2",function(d){return d.x1+corrX+blankR*(d.x2-d.x1)/Math.sqrt((d.x2-d.x1)*(d.x2-d.x1)+(d.y2-d.y1)*(d.y2-d.y1))})
+  .attr("y2",function(d){return d.y1+corrY+blankR*(d.y2-d.y1)/Math.sqrt((d.x2-d.x1)*(d.x2-d.x1)+(d.y2-d.y1)*(d.y2-d.y1))})
+  .transition()
+  .attr("x2",function(d){return d.x2+corrX-blankR*(d.x2-d.x1)/Math.sqrt((d.x2-d.x1)*(d.x2-d.x1)+(d.y2-d.y1)*(d.y2-d.y1))})
+  .attr("y2",function(d){return d.y2+corrY-blankR*(d.y2-d.y1)/Math.sqrt((d.x2-d.x1)*(d.x2-d.x1)+(d.y2-d.y1)*(d.y2-d.y1))})
+  .delay(function(d,i){return i*300}).duration(500);
 
 
 /*
@@ -659,6 +559,243 @@ var p = d3.select("body").selectAll("p")
   .append("p")
   .text("hello ");
   */
+
+
+
+
+function information(X,Y,Title,Location,Desc,Work,Coffee){
+
+var infoWidth=250;
+var infoHight=330;
+//////////p.legibility {
+//////////  text-rendering: optimizeLegibility;}
+
+
+d3.selectAll("g").remove();
+
+var group=d3.select("svg").append("g");
+
+var line = group.append("line")
+  .attr("stroke-width",2)
+  .attr("stroke","#707070")
+  .attr("x1",X+corrX+21)
+  .attr("y1",Y+corrY)
+  .attr("x2",X+corrX+21)
+  .attr("y2",Y+corrY);
+
+line
+  .transition()
+  .attr("x2",X+50+170)
+  .duration(100);
+
+var rectangle=group.append("rect")
+.attr("fill","#603813")
+.attr("stroke-width",2)
+.attr("stroke","#351503")
+.attr("x",X+corrX+50)
+.attr("y",Y+corrY)
+.attr("rx",3)
+.attr("ry",3)
+.attr("width",infoWidth)
+.attr("height",0);
+
+rectangle
+  .transition()
+  .attr("height",infoHight)
+  .attr("y",Y+corrY-21)
+  .delay(100)
+  .duration(500);
+
+var title=group.append("text")
+//.html(Title)
+.text(Title)
+.attr("width",infoWidth-20)
+.attr("height",40)
+.attr("style","letter-spacing:1;")
+//.attr("text-rendering","optimizeLegibility")
+///.attr("webkit-appearance","none")
+.attr("x",X+corrX+65)
+.attr("y",Y+corrY+5)
+.attr("fill","white")
+////.attr("font-family","Amaranth")
+.attr("font-weight",200)
+.attr("font-size","1.2em")
+.attr("opacity",0);
+
+var location=group.append("text")
+.text(Location)
+.attr("x",X+corrX+65)
+.attr("y",Y+corrY+20)
+.attr("fill","#A67C52")
+.attr("opacity",0)
+//.attr("fill","#A67C52")
+.attr("font-weight",900)
+.attr("font-size","0.8em");
+
+
+var cup=group.append("svg:image")
+.attr("x",X+corrX+58)
+.attr("y",Y+corrY+31)
+.attr("width",18)//1.846
+.attr("height",10)
+.attr("fill","white")
+.attr("opacity",0)
+.attr("xlink:href","cup.svg");
+
+
+var cupText=group.append("text")
+.text(Coffee+" / 4")
+//.text("Капучино")
+.attr("x",X+corrX+80)
+.attr("y",Y+corrY+40)
+.attr("fill","white")
+.attr("opacity",0)
+.attr("font-weight",200)
+.attr("font-size","0.8em");
+
+
+var note=group.append("svg:image")
+.attr("x",X+corrX+118)
+.attr("y",Y+corrY+31)
+.attr("width",18)//1.846
+.attr("height",10)
+.attr("fill","white")
+.attr("opacity",0)
+.attr("xlink:href","note.svg");
+
+
+var noteText=group.append("text")
+.text(Work+" / 4")
+//.text("Капучино")
+.attr("x",X+corrX+140)
+.attr("y",Y+corrY+40)
+.attr("fill","white")
+.attr("opacity",0)
+//.attr("font-weight",900)
+.attr("font-size","0.8em");
+
+var description=group.append("foreignObject")
+.attr("width",infoWidth-25)
+.attr("height","100%")
+.attr("x",X+corrX+65)
+.attr("y",Y+corrY+60)
+.attr("opacity",0);
+
+
+
+title.transition().attr("opacity",1).delay(300);
+location.transition().attr("opacity",1).delay(300);
+cup.transition().attr("opacity",1).delay(300);
+cupText.transition().attr("opacity",1).delay(300);
+note.transition().attr("opacity",1).delay(300);
+noteText.transition().attr("opacity",1).delay(300);
+description.transition().attr("opacity",1).delay(300);
+
+
+description
+.append("xhtml:p")
+.html(Desc)
+//.attr("font-family","Amaranth")
+.attr("font-weight",100)
+.attr("font-size","0.8em");
+
+//function(Desc)
+
+//var tmp=group.attr("height");
+//attr("height");
+//foreignObject.attr("height");
+//d3.select("foreignObject").node().getBoundingClientRect().height;
+//d3.select("foreignObject").style("height")
+
+
+//d3.select("rect").transition().attr("height",tmp).duration(300);
+//d3.select("rect")
+//.attr("height",tmp.height);
+//$("div").height()
+
+
+}
+
+
+function pulse(finalRadius,duration) {
+  return function() {
+    d3.select(this).transition().attr("r",finalRadius).duration(duration);//.ease("elastic");
+  };
+}
+
+
+
+
+
+function features(data){
+
+
+/*
+var circles = d3.select("svg")
+.selectAll("circle")
+.data(data)
+.enter().append("circle")
+//.attr("id",function(d,i) {return "cir"+i})
+//.style("fill", "star.svg")
+.attr("stroke-width",2)
+
+*/
+
+d3.select("svg")//.data(data)
+.selectAll("image").data(data)
+.enter()
+.append("svg:image")
+
+.attr("xlink:href",function(d){return d.Feature})
+//  "star.svg")
+.attr("width",30)//1.846
+.attr("height",30)
+.attr("y",function(d){return d.Y+corrY-15})
+.attr("x",function(d){return d.X+corrX-15})
+
+//.attr("id",function(d,i) {return "cir"+i})
+//.style("fill", "star.svg")
+//.attr("stroke-width",2)
+
+
+.on("mouseover", function(d,i){d3.select("#cir"+i).transition().attr("r",15).duration(150)})
+//.on("mouseover", function(d,i){pulseFeatured(d,i,15,150)})
+.on("mouseout", function(d,i){d3.select("#cir"+i).transition().attr("r",13).duration(150)})
+.on("click", function(d){information(d.X,d.Y,d.Title,d.Location,d.Desc,d.Work,d.Coffee)});
+
+
+
+/*
+var starX=440-10+corrX;
+var starY=685-10+corrY;
+
+
+d3.select("svg").append("svg:image")
+//.attr("fill", "star.svg");
+//.style("fill","white")
+//.attr("xlink:href","star.svg")
+.attr("x",starX)
+.attr("y",starY)
+.attr("width",20)//1.846
+.attr("height",20)
+//.attr("fill","white")
+.attr("opacity",1)
+.attr("xlink:href","star.svg")
+//.on("mouseover", function(){d3.select("#cir9").transition().attr("r",15).duration(150);})
+//.on("mouseout", function(){d3.select("#cir9").transition().attr("r",13).duration(150);})
+.on("click", function(d){information(starX,starY,"test",Data.Location[9],"dDesc","dWork","dCoffee")});
+
+*/
+//.on("mouseover", function(){d3.select(svg).transition().attr("r",15).duration(150);})
+//.on("mouseout", pulse(13,150))
+
+
+
+}
+
+
+
+
 </script>
 
 
