beta minor update

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ khtml-opacity:0; fill-opacity
 <td>
 <a href="https://twitter.com/share"><img height="25px" src="twitter.svg" onerror="this.onerror=null; this.src='image.png'"></a>
 </td><td>
-<a href="http://www.facebook.com/share.php?u=http://ya.ru"><img height="25px" src="fb.svg" onerror="this.onerror=null; this.src='image.png'"></a></td>
+<a href="http://www.facebook.com/share.php?u=http://ccffee.github.io"><img height="25px" src="fb.svg" onerror="this.onerror=null; this.src='image.png'"></a></td>
 </tr></table>
 </div>
 
@@ -634,7 +634,7 @@ var location=group.append("text")
 
 
 var cup=group.append("svg:image")
-.attr("x",X+corrX+58)
+.attr("x",X+corrX+63)
 .attr("y",Y+corrY+31)
 .attr("width",18)//1.846
 .attr("height",10)
@@ -646,7 +646,7 @@ var cup=group.append("svg:image")
 var cupText=group.append("text")
 .text(Coffee+" / 4")
 //.text("Капучино")
-.attr("x",X+corrX+80)
+.attr("x",X+corrX+85)
 .attr("y",Y+corrY+40)
 .attr("fill","white")
 .attr("opacity",0)
@@ -655,7 +655,7 @@ var cupText=group.append("text")
 
 
 var note=group.append("svg:image")
-.attr("x",X+corrX+118)
+.attr("x",X+corrX+128)
 .attr("y",Y+corrY+31)
 .attr("width",18)//1.846
 .attr("height",10)
@@ -667,7 +667,7 @@ var note=group.append("svg:image")
 var noteText=group.append("text")
 .text(Work+" / 4")
 //.text("Капучино")
-.attr("x",X+corrX+140)
+.attr("x",X+corrX+150)
 .attr("y",Y+corrY+40)
 .attr("fill","white")
 .attr("opacity",0)
